# perspectv

./: .gitignore  README.md  pyproject.toml
perspectv/: cli.py  llm.py  model.py  scrape.py  search.py
perspectv/prompts/: page_extract.txt  report_products.txt  report_software.txt  report_summary.txt  report_swot.txt
