[tool.poetry]
name = "perspectv"
version = "0.1.0"
description = "LLM-powered summary of a business website"
authors = ["Jason Stitt"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
requests = "==2.*"
sqlalchemy = "==2.*"
duckduckgo-search = "==5.*"
click = "==8.*"
playwright = "==1.*"
aiostream = "==0.5.*"
markdown2 = "^2.4.13"

[tool.poetry.scripts]
perspectv = "perspectv.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
